--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
             <div class="mb-5">
 
-                <img style="max-width: 200px;" src="/images/boucleoreillecauris1250.jpg">
+                <img style="max-width: 200px;" src="https://jpkpointfr.github.io/Shea/images/boucleoreillecauris1250.jpg">
                 <br>
                 <button type="button" class="btn btn-primary">Payer</button>
             </div>
@@ -29,7 +29,7 @@
 
             <div class="mb-5">
 
-                <img style="max-width: 200px;" src="/images/braceletcauris.jpg">
+                <img style="max-width: 200px;" src="https://jpkpointfr.github.io/Shea/images/braceletcauris.jpg">
                 <br>
 
                 <button type="button" class="btn btn-primary">Payer</button>
