--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
                 <img style="max-width: 200px;" src="https://jpkpointfr.github.io/Shea/images/boucleoreillecauris1250.jpg">
                 <br>
-                <button type="button" class="btn btn-primary">Payer</button>
+                <button type="button" class="btn btn-primary">Commander ce produit</button>
             </div>
         </a>
 
@@ -32,7 +32,7 @@
                 <img style="max-width: 200px;" src="https://jpkpointfr.github.io/Shea/images/braceletcauris.jpg">
                 <br>
 
-                <button type="button" class="btn btn-primary">Payer</button>
+                <button type="button" class="btn btn-primary">Commander ce produit</button>
             </div>
         </a>
     </div>
